@@ -1,5 +1,14 @@
 2013-02-26  James Robinson  <jamesr@chromium.org>
 
+        [chromium] Remove WebLayerTreeViewClient::(will|did)BeginFrame
+        https://bugs.webkit.org/show_bug.cgi?id=110928
+
+        Reviewed by Adrienne Walker.
+
+        * chromium/public/WebLayerTreeViewClient.h:
+
+2013-02-26  James Robinson  <jamesr@chromium.org>
+
         [chromium] Remove unused WebLayerTreeViewClient calls
         https://bugs.webkit.org/show_bug.cgi?id=110923
 
